# UniversalUpdateFramework

./: README.md
Client/UniversalUpdateFrameworkClient/: .clang-format  .gitignore  CMakeLists.txt  ErrorCode.hpp  TypeDefinition.h  UpdateCore.cpp  UpdateCore.h  main.cpp
Client/UniversalUpdateFrameworkClient/Network/: ApiRequest.cpp  ApiRequest.h  ApiRequest.hpp
Client/UniversalUpdateFrameworkClient/UpdateCore/: AppManifest.cpp  AppManifest.h  AppManifest.hpp  AppVersion.cpp  AppVersion.h  AppVersion.hpp  DifferencePackageManifest.cpp  DifferencePackageManifest.h  DifferencePackageManifest.hpp  ErrorCode.hpp  FullPackageManifest.cpp  FullPackageManifest.h  FullPackageManifest.hpp  TypeDefinition.hpp  UpdateConfig.h  UpdateConfig.hpp  UpdateStatus.hpp  Version.h  Version.hpp
Client/UniversalUpdateFrameworkClient/UpdateLogic/: DifferencePackageUpdate.cpp  DifferencePackageUpdate.h  DifferencePackageUpdate.hpp  DifferenceUpdate.hpp  FullPackageUpdate.hpp  FullpackageUpdate.cpp  FullpackageUpdate.h  MultiVersionDifferencePackageUpdate.cpp  MultiVersionDifferencePackageUpdate.h  MultiVersionDifferencePackageUpdate.hpp  UpdateClientAppEntry.hpp  UpdateSelf.hpp  VerifyAndRePatch.hpp  VerifyRePatchSetPermission.hpp  verifyAndRePatch.cpp  verifyAndRePatch.h
Client/UniversalUpdateFrameworkClientGui/: .gitignore  CMakeLists.txt  main.cpp
Client/UniversalUpdateFrameworkClientGui/Resource/: resources.qrc
Client/UniversalUpdateFrameworkClientGui/src/framework/Definition/: AppSpecification.hpp  ImageDefination.hpp
Client/UniversalUpdateFrameworkClientGui/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Common/log/: EditorConsoleSink.h  Log.cpp  Log.h
Common/md5/: md5.h
Common/processutil/: DeleteFileForce.cpp  DeleteFileForce.hpp
Common/processutil/Windows/: FileLocksmith.cpp  FileLocksmith.h  NtdllBase.cpp  NtdllBase.h  NtdllExtensions.cpp  NtdllExtensions.h
Common/util/: util.hpp
Generator/UniversalUpdateFrameworkGenerator/: CMakeLists.txt  main.cpp  md5.cpp  testmd5.cpp
Generator/UniversalUpdateFrameworkGenerator/src/: AppManifest.hpp  AppVersion.hpp  Defination.hpp  DifferencePackageGenerator.hpp  DifferencePackageManifest.hpp  FilePermission.hpp  FullPackageGenerator.hpp  FullPackageManifest.hpp  GeneratorAppEntry.h  UpdatePackageBuild.hpp  UpdaterVersionInfoGenerator.hpp  Version.hpp  VersionConfig.hpp
Generator/UniversalUpdateFrameworkGenerator/src/TypeDefination/: AppManifest.hpp  AppVersion.hpp  DifferencePackageManifest.hpp  FullPackageManifest.hpp  UpdatePackageBuild.hpp  VersionConfig.hpp
Generator/UniversalUpdateFrameworkGeneratorGui/: CMakeLists.txt  app_win32.rc  format_all.ps1  main.cpp
Generator/UniversalUpdateFrameworkGeneratorGui/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  UpdaterVersionConfigGenerator.cpp  UpdaterVersionConfigGenerator.h  UpdaterVersionConfigGenerator.ui
Server/UniversalUpdateFrameworkServer/: .gitignore  UniversalUpdateFrameworkServer.sln
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/: .gitignore  UniversalUpdateFrameworkServer.csproj  WeatherForecast.cs
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/Controllers/: ApiManifestController.cs  AppDifferencePackageController.cs  AppFullPackageController.cs  AppManifestController.cs  AppVersionController.cs  AuthenticationController.cs  FileCdnUrlController.cs  UpdaterUpdateSelfController.cs  WeatherForecastController.cs
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/DataManager/: AppDifferencePackageDataManager.cs  AppFullPackageDataManager.cs  AppManifestDataManager.cs  AppVersionDataManager.cs  FileCdnUrlDataManager.cs  GetDifferencePackageDataManager.cs  IDataManager.cs  UpdaterUpdateSelfDataManager.cs
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/Definition/: VersionConfig.cs
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/Properties/: launchSettings.json
Server/UniversalUpdateFrameworkServer/UniversalUpdateFrameworkServer/Util/: Util.cs
